[gd_scene load_steps=4 format=3 uid="uid://b86apxscyb08y"]

[ext_resource type="Script" path="res://Main Menu/Main Menu.gd" id="1_or7ag"]
[ext_resource type="FontFile" uid="uid://deb72frt1iytf" path="res://Resources/Fonts/NESCyrillic.ttf" id="2_02ror"]
[ext_resource type="AudioStream" uid="uid://0oj2c6hdefcb" path="res://Resources/Music/1-01_Dark_Souls_III.mp3" id="3_rrf58"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_or7ag")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.498039, 0.0941176, 1)

[node name="MainMenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -143.0
offset_top = -103.5
offset_right = 143.0
offset_bottom = 103.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="Play" type="Button" parent="MainMenuContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_02ror")
theme_override_font_sizes/font_size = 30
text = "Play
"

[node name="Load" type="Button" parent="MainMenuContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_02ror")
theme_override_font_sizes/font_size = 30
text = "Load Game
"

[node name="Exit" type="Button" parent="MainMenuContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_02ror")
theme_override_font_sizes/font_size = 30
text = "Exit
"

[node name="TempGameLogo" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -340.0
offset_top = -207.0
offset_right = 326.0
offset_bottom = -155.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("2_02ror")
theme_override_font_sizes/normal_font_size = 55
text = "Volcanic Bird: Bird Quest
"
fit_content = true
scroll_active = false

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_rrf58")
autoplay = true

[connection signal="pressed" from="MainMenuContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MainMenuContainer/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="MainMenuContainer/Exit" to="." method="_on_exit_pressed"]
